Applied patch from n3s: the check for file extension was broken. Thanks! This fixes bug #2034

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@24930 a95241bf-73f2-0310-859d-f6bbb57e9c96