src/apps/expander/ExpanderRules.cpp
@@ -124,8 +124,11 @@ ExpanderRules::MatchingRule(BString &fileName, const char *filetype)
 	int32 length = fileName.Length();
 	for (int32 i = 0; i < count; i++) {
 		ExpanderRule *rule = (ExpanderRule *)fList.ItemAt(i);
-		if ((rule->MimeType().IsValid() && rule->MimeType() == filetype)
-			|| (fileName.FindLast(rule->FilenameExtension()) == (length - rule->FilenameExtension().Length())))
+		if (rule->MimeType().IsValid() && rule->MimeType() == filetype)
+			return rule;
+		int32 extPosition = fileName.FindLast(rule->FilenameExtension());
+		if (extPosition != -1 
+			&& extPosition == (length - rule->FilenameExtension().Length()))
 			return rule;
 	}
 	return NULL;
